--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "marked": "^1.2.7",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -17,6 +21,7 @@
     "react-twitter-embed": "^3.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "remark-gfm": "^1.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
