--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "bootstrap-switch-button": "^1.1.0",
+    "bootstrap-switch-button-react": "^1.2.0",
     "marked": "^1.2.7",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-redux": "^7.2.2",
