--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.2.3",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
