--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-switch-button": "^1.1.0",
     "bootstrap-switch-button-react": "^1.2.0",
+    "date-fns": "^2.16.1",
     "marked": "^1.2.7",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
